[package]
name = "rust-kv-store"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "5"  # High-performance concurrent HashMap
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }  # CLI Argument Parsing
thiserror = "1"  # Better error handling

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
